@@ -1,3 +1,8 @@
+2004-11-07  Joseph S. Myers  <joseph@codesourcery.com>
+
+	* c-typeck.c (build_unary_op): Replace unreachable diagnostic for
+	taking address of bit-field by assertion.
+
 2004-11-06  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.md (attribute "op_type"): Default to "NN".
